fixed x overflow on iphone

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,10 @@ body {
  font-family: 'Montserrat', serif;
  overflow-x: hidden;
 }
+.wrapper {
+ overflow-x: hidden;
 
+}
 
 .form-control::-webkit-input-placeholder {
  color: white;
@@ -139,6 +142,7 @@ h4 {
  .heboot {
   width: 100%;
  }
+
  h1 {
   font-size: 40px;
  }
